[package]
name = "ohes_init"
version = "0.1.0"
authors = ["pitust <piotr@stelmaszek.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
liboh = { path = "liboh" }
rlibc = "1.0.0"
postcard = { version = "0.5.1", features = ["alloc"] }
serde = { version = "1.0.117", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.59", default-features = false, features = ["alloc"] }
serde_derive = "1.0.117"

[[bin]]
path = "src/init.rs"
name = "init"

[[bin]]
path = "src/kinfo.rs"
name = "kinfo"


[[bin]]
path = "src/shtdwn.rs"
name = "shutdown"
